syntax = "proto3";
package gradlegRPC;
option java_package = "io.grpc.hellos";


service fleetClient {
  rpc message(requestMessage) returns (responseMessage){}
  rpc grobotID(getRobotID) returns (robotID){}
  rpc grobotReport(getRobotReport) returns (robotReportResponse);

}


message requestMessage {
  string name = 1;
}

message responseMessage {
  string name = 1;
}

message getRobotID {
  string key = 1;
  int32 value = 2;
  string type = 3;
  string connection = 4;
  string timeStamp = 5;
}

message robotID {
  string name = 1;
}

message robotReportResponse {
  string name = 1;
}


message getRobotReport {
  string kan = 1; // for typing (my robotReport) in the request; so in server we look for a request that starts with (my robotReport)
  int32 robotID = 2;
  double x = 3;
  double y = 4;
  double z = 5;
  double roll = 6;
  double pitch = 7;
  double yaw = 8;
  int32 pathIndex = 9;
  double velocity = 10;
  double distanceTraveled = 11;
  int32 criticalPoint = 12;
}